--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
@@ -6,7 +6,7 @@
 <div class="ui attached segment">
   <form class="ui form">
     <input type="hidden" id="searchFlag" name="searchFlag">
-    <div class="inline fields  ui grid">
+    <!--<div class="inline fields  ui grid">
       <div class="one wide field "></div>
       <div class="three wide field ">
         <label>สำนักงานสรรพสามิตภาค</label>
@@ -27,8 +27,8 @@
         </select>
       </div>
       <div class="one wide field "></div>
-    </div>
-    <div class="inline fields  ui grid">
+    </div>-->
+    <!--<div class="inline fields  ui grid">
       <div class="one wide field "></div>
       <div class="three wide field ">
         <label>สรรพสามิตพื้นที่สาขา</label>
@@ -42,7 +42,7 @@
       <div class="three wide field "></div>
       <div class="four wide field "></div>
       <div class="one wide field "></div>
-    </div>
+    </div>-->
     <div class="inline fields  ui grid">
       <div class="one wide field "></div>
       <div class="three wide field ">
