--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -3,7 +3,7 @@
   <div class="sixteen wide column">
 
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>สร้างกระดาษทำการประเมินความเสี่ยงโครงการด้านงบประมาณ</span>
+      <span>ประเมินความเสี่ยงโครงการยุทธศาสตร์ของกรมสรรพสามิต</span>
     </div>
 
     <div class="ui attached segment">
@@ -25,8 +25,8 @@
             <label>ปัจจัยเสี่ยง</label>
           </div>
           <div class="four wide field ">
-            <select class="ui search dropdown ai">
-              <option value="0">ปัจจัยเสี่ยงงบประมาณ </option>
+            <select class="ui search dropdown ai" id="riskType" name="riskType" [(ngModel)]="riskType">
+              <option value="0">ปัจจัยเสี่ยงงบประมาณทั้งหมด</option>
               <option *ngFor="let risk of riskList; index as i;" value="{{risk.value}}">{{risk.description}}</option>
 
             </select>
