--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
@@ -1,14 +1,4 @@
-<div class="ui attached segment">
-  <div class="ui breadcrumb">
-    <a class="section">ตรวจสอบภายใน</a>
-    <div class="divider"> / </div>
-    <a class="section">ตรวจสอบพัสดุ</a>
-    <div class="divider"> / </div>
-    <a class="section">ตรวจสอบแสตมป์</a>
-    <div class="divider"> / </div>
-    <div class="active section">ตรวจสอบแสตมป์พื้นที่</div>
-  </div>
-</div>
+<app-breadcrumb [route]=breadcrump></app-breadcrumb>
 
 <div class="ui top attached header">
   <span>ค้นหาข้อมูลแสตมป์</span>
