--- a/workspace/ims-client/src/app/buckwaframework/common/components/breadcrumb/breadcrumb.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/common/components/breadcrumb/breadcrumb.component.html
@@ -1,8 +1,26 @@
-<div class="ui attached segment">
-  <div class="ui breadcrumb" *ngFor="let item of route;let i = index">
-    <a class="section" *ngIf="item.route != '#'" [routerLink]="item.route">{{item.label}}</a>    
-    <div class="divider" *ngIf="item.route != '#'"> /</div>
-    <div class="active section" *ngIf="item.route == '#'">{{item.label}}</div> 
-    <div class="divider" *ngIf="item.route == '#'"> /</div>
+<div class="ui grid">
+  <div class="sixteen wide column bread">
+    <div class="ui segment">
+
+      <div class="ui breadcrumb">
+        <a class="section" routerLink="/home" href="javascript:void(0)">หน้าหลัก</a>
+        <i class="right chevron icon divider"></i>
+      </div>
+
+      <div class="ui breadcrumb" *ngFor="let item of route;let i = index">
+
+        <!-- Linked and Can Route -->
+        <a class="section" *ngIf="item.route != '#'" [routerLink]="item.route" href="javascript:void(0)">{{item.label}}</a>
+        <i class="right chevron icon divider" *ngIf="item.route != '#' && i != route.length-1"></i>
+
+        <!-- Active -->
+        <div class="active section" *ngIf="item.route == '#' && i == route.length-1">{{item.label}}</div>
+
+        <!-- No Link and No Active -->
+        <div class="active section" *ngIf="item.route == '#' && i != route.length-1">{{item.label}}</div>
+        <i class="right chevron icon divider" *ngIf="item.route == '#' && i != route.length-1"></i>
+
+      </div>
+    </div>
   </div>
 </div>
