--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -11,17 +11,18 @@
         <div class="ui center aligned grid">
           <div class="column fourteen wide">
             <div class="inline fields">
-                <div class="three wide field">
-                    <label>สรรพสามิตภาค</label>
+              <div class="three wide field">
+                <label>สรรพสามิตภาค</label>
+              </div>
+              <div class="five wide field {{ checkValid('sector', f) ? 'error' : ''  }} ">
+                <div class="ui input">
+                  <select class="ui selection dropdown ai" name="sector" (change)="onSectorChange($event)" required
+                    ngModel>
+                    <option value="">เลือกภาค</option>
+                    <option value="{{sector.lovId}}" *ngFor="let sector of sectors">{{sector.subTypeDescription}}</option>
+                  </select>
                 </div>
-                <div class="five wide field {{ checkValid('sector', f) ? 'error' : ''  }} ">
-                    <div class="ui input">
-                        <select class="ui selection dropdown ai" name="sector" (change)="onSectorChange($event)" required ngModel>
-                            <option value="">เลือกภาค</option>
-                            <option value="{{sector.lovId}}" *ngFor="let sector of sectors">{{sector.subTypeDescription}}</option>
-                        </select>
-                    </div>
-                </div>
+              </div>
               <div class="three wide field">
                 <label>สรรพสามิตพื้นที่</label>
               </div>
@@ -33,14 +34,6 @@
                   </select>
                 </div>
               </div>
-              <!-- <div class="five wide field {{ checkValid('area', f) ? 'error' : ''  }} ">
-                <div class="ui input">
-                  <select class="ui selection dropdown ai" name="area" required ngModel>
-                    <option value="">เลือกพื้นที่</option>
-                    <option value="{{area.subTypeDescription}}" *ngFor="let area of areas">{{area.subTypeDescription}}</option>
-                  </select>
-                </div>
-              </div> -->
             </div>
             <div class="inline fields">
               <div class="three wide field">
@@ -63,20 +56,17 @@
               <i class="search icon"></i>
               ค้นหา
             </button>
-            <button type="submit" (click)="typeOfSubmit = 'S'" class="ui mini green button">
+            <button type="reset" class="ui mini button">
+              <i class="refresh icon"></i>
+              ล้างข้อมูล
+            </button>
+            <button type="submit" (click)="typeOfSubmit = 'S'" class="ui mini primary button">
               <i class="add icon"></i>
               สร้าง
-            </button>
-            <button type="reset" class="ui mini red button">
-              <i class="delete icon"></i>
-              ล้างข้อมูล
             </button>
           </div>
         </div>
       </form>
-    </div>
-
-    <div class="ui segment">
       <div class="ui grid">
         <div class="sixteen wide column">
           <table id="datatable" style="width: 100%;" class="ui small collapsing celled table aligned hover nowrap">
@@ -92,9 +82,6 @@
             <tbody></tbody>
           </table>
         </div>
-        <!-- <div class="two wide column centered column" style="margin-top: -59px;">
-          <button class="fluid ui red mini button">ลบ</button>
-        </div> -->
       </div>
     </div>
   </div>
