--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
@@ -1,109 +1,116 @@
 <app-breadcrumb [route]=breadcrump></app-breadcrumb>
 
-<div class="ui top attached header">
-  <span>ค้นหาข้อมูลแสตมป์</span>
-</div>
-<!-- form search -->
-<div class="ui attached segment">
-  <form class="ui form">
-    <input type="hidden" id="searchFlag" name="searchFlag">
-   <!-- <div class="inline fields  ui grid">
-      <div class="one wide field "></div>
-      <div class="three wide field ">
-        <label>สำนักงานสรรพสามิตภาค</label>
-      </div>
-      <div class="four wide field ">
-        <select name="sector" id="sector" class="ui dropdown ai search" (change)="sectorOnchange($event)">
-          <option value="">กรุณาเลือก</option>
-          <option *ngFor="let item of sector; index as i;" value="{{item.value}}">{{item.label}}</option>
-        </select>
-      </div>
-      <div class="three wide field ">
-        <label>สำนักงานสรรพสามิตพื้นที่</label>
-      </div>
-      <div class="four wide field ">
-        <select name="area" id="area" class="ui dropdown ai search" (change)="areaOnchange($event)">
-          <option value="">กรุณาเลือก</option>
-          <option *ngFor="let item of area" value="{{item.value}}">{{item.label}}</option>
-        </select>
-      </div>
-      <div class="one wide field "></div>
-    </div>-->
-    <div class="inline fields  ui grid">
-      <div class="one wide field "></div>
-      <div class="three wide field ">
-        <label>วันที่เริ่มต้น</label>
-      </div>
-      <div class="four wide field ">
-        <div class="ui calendar width100" id="dateF">
-          <div class="ui input left icon">
-            <i class="time icon"></i>
-            <input name="dateForm" type="text" id="dateForm" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <div class="ui top attached header">
+      <span>ค้นหาข้อมูลแสตมป์</span>
+    </div>
+    <!-- form search -->
+    <div class="ui attached segment">
+      <form class="ui form">
+        <input type="hidden" id="searchFlag" name="searchFlag">
+        <!-- <div class="inline fields  ui grid">
+                  <div class="one wide field "></div>
+                  <div class="three wide field ">
+                    <label>สำนักงานสรรพสามิตภาค</label>
+                  </div>
+                  <div class="four wide field ">
+                    <select name="sector" id="sector" class="ui dropdown ai search" (change)="sectorOnchange($event)">
+                      <option value="">กรุณาเลือก</option>
+                      <option *ngFor="let item of sector; index as i;" value="{{item.value}}">{{item.label}}</option>
+                    </select>
+                  </div>
+                  <div class="three wide field ">
+                    <label>สำนักงานสรรพสามิตพื้นที่</label>
+                  </div>
+                  <div class="four wide field ">
+                    <select name="area" id="area" class="ui dropdown ai search" (change)="areaOnchange($event)">
+                      <option value="">กรุณาเลือก</option>
+                      <option *ngFor="let item of area" value="{{item.value}}">{{item.label}}</option>
+                    </select>
+                  </div>
+                  <div class="one wide field "></div>
+                </div>-->
+        <div class="inline fields  ui grid">
+          <div class="one wide field "></div>
+          <div class="three wide field ">
+            <label>วันที่เริ่มต้น</label>
           </div>
-        </div>
-      </div>
-      <div class="three wide field ">
-        <label>วันนี้สิ้นสุด</label>
-      </div>
-      <div class="four wide field ">
-        <div class="ui input">
-          <div class="ui calendar width100" id="dateT">
-            <div class="ui input left icon">
-              <i class="time icon"></i>
-              <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+          <div class="four wide field ">
+            <div class="ui calendar width100" id="dateF">
+              <div class="ui input left icon">
+                <i class="time icon"></i>
+                <input name="dateForm" type="text" id="dateForm" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy"
+                  [attr.required]="true">
+              </div>
             </div>
           </div>
+          <div class="three wide field ">
+            <label>วันนี้สิ้นสุด</label>
+          </div>
+          <div class="four wide field ">
+            <div class="ui input">
+              <div class="ui calendar width100" id="dateT">
+                <div class="ui input left icon">
+                  <i class="time icon"></i>
+                  <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy"
+                    [attr.required]="true">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="one wide field "></div>
+        </div><br>
+        <div class="ui stackable center aligned page grid">
+          <button class="ui mini primary button" type="button" (click)="onSearch()"><i class="search icon"></i> ค้นหา</button>
+          <button class="ui mini gray button " type="button" (click)="onClear()"><i class="delete icon"></i> ล้างข้อมูล</button>
+          <button class="ui mini primary button" routerLink="/int05/1/1/3"><i class="add icon"></i>เพิ่มข้อมูล</button>
+        </div><br>
+      </form>
+    </div>
+    <!--table-->
+    <div class="ui segment">
+      <table id="dataTable" class="ui small celled table nowrap" style="width: 100%">
+        <thead>
+          <tr style="text-align: center;">
+            <th rowspan="2">ลำดับ</th>
+            <th rowspan="2">วันที่ การรับ-จ่าย</th>
+            <th rowspan="2">สถานะ การรับ-จ่าย</th>
+            <th rowspan="2">หน่วยงาน/ผู้ประกอบการที่รับ-จ่ายแสตมป์</th>
+            <th colspan="2">หนังสือขอเบิกแสตมป์</th>
+            <th colspan="2">หนังสือส่งแสตมป์</th>
+            <th rowspan="2">เลขที่ใบ 5 ตอน</th>
+            <th rowspan="2">ลงวันวันที่</th>
+            <th rowspan="2">วันที่ตรวจนับ</th>
+            <th rowspan="2">ผู้ตรวจนับ</th>
+            <th rowspan="2">ชนิดแสตมป์/ขนาดบรรจุ</th>
+            <th rowspan="2">จำนวน (เล่ม)</th>
+            <th rowspan="2">จำนวน (ดวง)</th>
+            <th rowspan="2">มูลค่าที่พิมพ์ (บาทต่อดวง)</th>
+            <th rowspan="2">รวมค่าพิมพ์ (บาท)</th>
+            <th rowspan="2">เลขที่ประจำเล่มแสตมป์</th>
+            <th rowspan="2">หมายเหตุ</th>
+            <th rowspan="2">Action</th>
+
+          </tr>
+          <tr>
+            <th>เลขที่หนังสือ</th>
+            <th>ลงวันที่</th>
+
+            <th>เลขที่หนังสือ</th>
+            <th>ลงวันที่</th>
+          </tr>
+        </thead>
+      </table>
+      <div class="ui centered grid">
+        <div class="sixteen wide center aligned column">
+          <a class="ui mini primary button" routerLink="/int05/1/1/2">สรุปแสตป์รายปีงบประมาณ</a>
+          <button class="ui mini primary button"> Export</button>
+          <button class="ui mini primary button"> พิมพ์รายงานตัดปีแสตมป์</button>
         </div>
       </div>
-      <div class="one wide field "></div>
-    </div><br>
-    <div class="ui stackable center aligned page grid">
-      <button class="ui mini primary button" type="button" (click)="onSearch()"><i class="search icon"></i> ค้นหา</button>
-      <button class="ui mini gray button " type="button" (click)="onClear()"><i class="delete icon"></i> ล้างข้อมูล</button>
-      <button class="ui mini primary button" routerLink="/int05/1/1/3"><i class="add icon"></i>เพิ่มข้อมูล</button>
-    </div><br>
-  </form>
-</div>
-
-<!--table-->
-<div class="ui segment">
-  <table id="dataTable" class="ui small celled table nowrap" style="width: 100%">
-    <thead>
-      <tr style="text-align: center;">
-        <th rowspan="2">ลำดับ</th>
-        <th rowspan="2">วันที่ การรับ-จ่าย</th>
-        <th rowspan="2">สถานะ การรับ-จ่าย</th>
-        <th rowspan="2">หน่วยงาน/ผู้ประกอบการที่รับ-จ่ายแสตมป์</th>
-        <th colspan="2">หนังสือขอเบิกแสตมป์</th>
-        <th colspan="2">หนังสือส่งแสตมป์</th>
-        <th rowspan="2">เลขที่ใบ 5 ตอน</th>
-        <th rowspan="2">ลงวันวันที่</th>
-        <th rowspan="2">วันที่ตรวจนับ</th>
-        <th rowspan="2">ผู้ตรวจนับ</th>
-        <th rowspan="2">ชนิดแสตมป์/ขนาดบรรจุ</th>
-        <th rowspan="2">จำนวน (เล่ม)</th>
-        <th rowspan="2">จำนวน (ดวง)</th>
-        <th rowspan="2">มูลค่าที่พิมพ์ (บาทต่อดวง)</th>
-        <th rowspan="2">รวมค่าพิมพ์ (บาท)</th>
-        <th rowspan="2">เลขที่ประจำเล่มแสตมป์</th>
-        <th rowspan="2">หมายเหตุ</th>
-        <th rowspan="2">Action</th>
-
-      </tr>
-      <tr>
-        <th>เลขที่หนังสือ</th>
-        <th>ลงวันที่</th>
-
-        <th>เลขที่หนังสือ</th>
-        <th>ลงวันที่</th>
-      </tr>
-    </thead>
-  </table>
-  <div class="ui centered grid">
-    <a class="ui mini primary button" routerLink="/int05/1/1/2">สรุปแสตป์รายปีงบประมาณ</a>
-    <button class="ui mini primary button"> Export</button>
-    <button class="ui mini primary button"> พิมพ์รายงานตัดปีแสตมป์</button>
-  </div><br>
+    </div>
+  </div>
 </div>
 
 <!-- modal edit-->
@@ -126,8 +133,8 @@
           <div class="ui calendar width100" id="dateOfPayForm">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input [(ngModel)]="formModal.dateOfPay" name="dateOfPay" id="dateOfPay" type="text" autofocus="false" [attr.readonly]="null"
-                placeholder="dd/MM/yyyy" [attr.required]="true">
+              <input [(ngModel)]="formModal.dateOfPay" name="dateOfPay" id="dateOfPay" type="text" autofocus="false"
+                [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -150,7 +157,8 @@
           <label>หน่วยงาน / ผู้ประกอบการ</label>
         </div>
         <div class="four wide field ">
-          <input [(ngModel)]="formModal.departmentName" id="departmentName" name="departmentName" type="text" placeholder="dd/mm/yyyy">
+          <input [(ngModel)]="formModal.departmentName" id="departmentName" name="departmentName" type="text"
+            placeholder="dd/mm/yyyy">
         </div>
         <div class="eight wide field "></div>
       </div>
@@ -161,7 +169,8 @@
           <label>หนังสือขอเบิกแสตมป์</label>
         </div>
         <div class="four wide field ">
-          <input [(ngModel)]="formModal.bookNumberWithdrawStamp" name="bookNumberWithdrawStamp" id="bookNumberWithdrawStamp" type="text">
+          <input [(ngModel)]="formModal.bookNumberWithdrawStamp" name="bookNumberWithdrawStamp" id="bookNumberWithdrawStamp"
+            type="text">
         </div>
         <div class="three wide field ">
           <label>ลงวันที่ขอเบิกแสตมป์</label>
@@ -170,8 +179,8 @@
           <div class="ui calendar width100" id="dateWithdrawStampForm">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input [(ngModel)]="formModal.dateWithdrawStamp" name="dateWithdrawStamp" id="dateWithdrawStamp" type="text" autocomplete="off"
-                [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              <input [(ngModel)]="formModal.dateWithdrawStamp" name="dateWithdrawStamp" id="dateWithdrawStamp" type="text"
+                autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -184,8 +193,8 @@
           <label>หนังสือส่งแสตมป์</label>
         </div>
         <div class="four wide field ">
-          <input [(ngModel)]="formModal.bookNumberDeliverStamp" name="bookNumberDeliverStamp" id="bookNumberDeliverStamp" type="text"
-            placeholder="dd/mm/yyyy">
+          <input [(ngModel)]="formModal.bookNumberDeliverStamp" name="bookNumberDeliverStamp" id="bookNumberDeliverStamp"
+            type="text" placeholder="dd/mm/yyyy">
         </div>
         <div class="three wide field ">
           <label>ลงวันที่ส่งแสตมป์</label>
@@ -194,8 +203,8 @@
           <div class="ui calendar width100" id="dateDeliverStampForm">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input [(ngModel)]="formModal.dateDeliverStamp" name="dateDeliverStamp" id="dateDeliverStamp" type="text" autocomplete="off"
-                [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              <input [(ngModel)]="formModal.dateDeliverStamp" name="dateDeliverStamp" id="dateDeliverStamp" type="text"
+                autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -217,8 +226,8 @@
           <div class="ui calendar width100" id="fivePartDateForm">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input [(ngModel)]="formModal.fivePartDate" name="fivePartDate" id="fivePartDate" type="text" autocomplete="off" [attr.readonly]="null"
-                placeholder="dd/MM/yyyy" [attr.required]="true">
+              <input [(ngModel)]="formModal.fivePartDate" name="fivePartDate" id="fivePartDate" type="text"
+                autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -240,8 +249,8 @@
           <div class="ui calendar width100" id="stampCheckDateForm">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input [(ngModel)]="formModal.stampCheckDate" name="stampCheckDate" id="stampCheckDate" type="text" autofocus="false" [attr.readonly]="null"
-                placeholder="dd/MM/yyyy" [attr.required]="true">
+              <input [(ngModel)]="formModal.stampCheckDate" name="stampCheckDate" id="stampCheckDate" type="text"
+                autofocus="false" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
             </div>
           </div>
         </div>
