--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -372,8 +372,8 @@
             <div class="inline fields"></div>
             <div class="ui center aligned grid">
               <div class="sixteen wide column">
-                <button class="ui mini primary button">
-                  <i class="print icon" (click)="ExportInfFull()"></i>
+                <button class="ui mini primary button" (click)="ExportInfFull()">
+                  <i class="print icon" ></i>
                   Export
                 </button>
                 <button class="ui mini button " (click)="clearDataForm3() ">
